<resources>
    <string name="app_name">LoginImplenetation</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm New Password</string>
    <string name="security_question">Security Question</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="signed_out">You have signed out</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="photos">Photos</string>
    <string name="database">database</string>
    <string name="settings">settings</string>
    <string name="DBAccess">This would open up the receipt database</string>
    <string name="please_enter_email">Please enter Email</string>
    <string name="your_name_here">Your name here</string>
    <string name="fName">First Name</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="budget_period">Budget Period</string>
    <string name="last_name">Last Name</string>
    <string name="total_budget">Total Budget</string>

    <string name="emptyCat">NONE</string>
    <string name="store_name">Store Name</string>
    <string name="tax">Tax</string>
    <string name="total_cost">Total Cost</string>
    <string name="you_have_no_expenses_to_report">You Have No Expenses to Report!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Add this for the drawer navigation bar -->
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>


    <string-array name="array_data">
        <item>Account Type</item>
        <item>Single</item>
        <item>Family</item>
    </string-array>

    <string-array name="array_data2">
        <item>Category Preferences</item>
        <item>Advertisement</item>
        <item>Education</item>
        <item>Electronics</item>
        <item>Food</item>
        <item>Health</item>
        <item>Laundry</item>
        <item>Beauty</item>
        <item>Other</item>
    </string-array>

    <string-array name="array_data3">
        <item>Notifications</item>
        <item>Daily</item>
        <item>weekly</item>
        <item>Monthly</item>
    </string-array>
</resources>

