<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@android:dimen/dialog_min_width_major"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/username"
            android:textColor="@color/text"
            android:textSize="16pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/createUser"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/username"
            android:inputType="text"
            android:autofillHints="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/password"
            android:textColor="@color/text"
            android:textSize="16pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/createPass1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/confirm"
            android:textColor="@color/text"
            android:textSize="16pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/createPass2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:inputType="textPassword"
            android:hint="@string/repeat_password"
            android:autofillHints="" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/security_question"
            android:textSize = "16pt"
            android:textColor="@color/text"
            android:textStyle="bold"/>
        <ExpandableListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />



    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>