<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app ="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/username"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="@color/text"
            android:textSize="16pt"/>

        <EditText
            android:id="@+id/createUser"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            tools:hint="username"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/password"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="@color/text"
            android:textSize="16pt"/>
        <EditText
            android:id="@+id/createPass1"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:inputType="textPassword"
            tools:hint="password"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/confirm"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="@color/text"
            android:textSize="16pt"/>
        <EditText
            android:id="@+id/createPass2"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:inputType="textPassword"
            tools:hint="password"/>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>