<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="?attr/PrimaryTextColor"
    android:id="@+id/newAccountFrag"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="top"
            android:text="Back"
            android:textColor="@color/com_facebook_blue"
            android:textSize="20dp"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/email"
            android:textColor="@color/text"
            android:textSize="16pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/createUser"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="80dp"
            android:hint="@string/email"
            android:inputType="text"
            android:autofillHints="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/password"
            android:textColor="@color/text"
            android:textSize="16pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/createPass1"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="80dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/confirm"
            android:textColor="@color/text"
            android:textSize="16pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/createPass2"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="80dp"
            android:inputType="textPassword"
            android:hint="@string/repeat_password"
            android:autofillHints="" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text = "Submit"
            />



    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>